swim_common/src/form/tests/derive/form/tag_enum.stderr
error: Deriving tags is not supported by enumerations. Use #[form(tag = "....")] on this variant instead
  --> $DIR/tag_enum.rs:21:20
   |
21 |             #[form(tag)]
   |                    ^^^
